--- a/v2.prediction.html
+++ b/v2.prediction.html
@@ -483,15 +483,16 @@
 
         let lotteryData = [];
 
-        const PATTERN_GROUPS = [
+        const PATTERNS = [
             [0, 1],
-            [0, 4],
-            [0, 4, 8],
             [0, 4, 5],
+            [0, 4, 8],
+            [0, 8],
+            [5, 8],
             [1, 3, 5, 7, 9],
-            [0, 2, 6, 8],
             [1, 3, 7, 9],
-            [8, 5]
+            [0,2, 6, 8],
+            [3, 6]
         ];
 
         const TrendingUpIcon = () => (
