--- a/v2.prediction.html
+++ b/v2.prediction.html
@@ -761,7 +761,7 @@
                 a.click();
             };
             const homePageRedirect = () => {
-                window.location = '/prediction.html'
+                window.location.href = '/lottery-prediction-tool/prediction.html'
             }
             if (loading) return (
                 <div className="loading">
