--- a/prediction.html
+++ b/prediction.html
@@ -597,7 +597,7 @@
             };
 
             const predictionPageRedirect = () => {
-                window.location.href = '/lottery-prediction-tool/v2.prediction.html'
+                window.location.href = './v2.prediction.html'
             }
             if (loading) return (
                 <div className="loading">
