--- a/v2.prediction.html
+++ b/v2.prediction.html
@@ -762,7 +762,7 @@
             };
             const homePageRedirect = () => {
                 const base = window.location.origin + window.location.pathname.replace(/\/[^/]*$/, '/');
-                window.location.href = `${base}.prediction.html`;
+                window.location.href = `${base}prediction.html`;
             }
             if (loading) return (
                 <div className="loading">
