--- a/v2.prediction.html
+++ b/v2.prediction.html
@@ -483,7 +483,7 @@
 
         let lotteryData = [];
 
-        const PATTERNS = [
+        const PATTERN_GROUPS = [
             [0, 1],
             [0, 4, 5],
             [0, 4, 8],
